# devilbot

./: .gitignore  CONTRIBUTING.md  README.md  arm-build-function.sh  build-function.sh  cdk.context.json  cdk.json  clean.sh  package-lock.json  package.json  ubuntu-config
.github/workflows/: build-and-test.yaml  check-and-lint.yaml
lib/: devil-bot-rust-cdk-stack.ts
resources/: Cargo.toml
resources/src/: aws.rs  commands.rs  event_handlers.rs  main.rs  slack.rs
resources/src/aws/: dynamo.rs
resources/src/commands/: buns.rs  chat_post_message.rs  conversations_open.rs  emoji_reaction.rs  heart.rs  introduction_reply.rs  onboard_user.rs  ping.rs
resources/src/event_handlers/: message_event_handler.rs  reaction_added_event_handler.rs  team_join_event_handler.rs
resources/src/slack/: add_reaction.rs  chat.rs  chat_post_ephemeral_message.rs  chat_post_message.rs  client.rs  conversation_replies.rs  conversations.rs  reactions.rs
test/: devil-bot-rust-cdk.test.ts
