[package]
authors = ["CodeDevils"]
name = "devil_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
log = "0.4.14"
serde = "^1"
serde_json = "1.0.74"
serde_derive = "^1"
simple_logger = "1.16.0"
tokio = {version = "1.15.0", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"
