[package]
authors = ["CodeDevils"]
name = "devil_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
lambda_http = "0.5.0"
lambda_runtime = "0.5.0"
log = "0.4.14"
openssl = { version = "0.10", features = ["vendored"] }
serde = "^1"
serde_json = "1.0.74"
serde_derive = "^1"
simple_logger = "2.1.0"
slack-hook = "0.8.0"
tokio = {version = "1.15.0", features = ["full"]}

[[bin]]
name = "bootstrap"
path = "src/main.rs"
