[package]
authors = ["CodeDevils"]
name = "devil_bot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
hyper = "0.14.20"
lambda_http = "0.7.1"
lambda_runtime = "0.7.0"
log = "0.4.14"
openssl = { version = "0.10", features = ["vendored"] }
serde = "^1"
serde_derive = "^1"
serde_json = "1.0.74"
simple_logger = "4.0.0"
slack-morphism = { version = "1.3.3", features = ["hyper", "axum"] }
tokio = { version = "1.15.0", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
